--- a/Develop/Assets/css/style.css
+++ b/Develop/Assets/css/style.css
@@ -4,13 +4,13 @@ body {
   line-height: 1;
 }
 
-textarea {
+.textarea {
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .jumbotron {
@@ -68,4 +68,9 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
 }
